fixes alignment of some copy in discover section

--- a/css/site.css
+++ b/css/site.css
@@ -12,8 +12,8 @@ div {
 section {
   border-style:purple;
   border-color:blue;
-}
-*/
+}*/
+
 
 /* general */
 .fullWidth {
@@ -226,6 +226,16 @@ a.button:hover {
 #your-spacecation h3, 
 #your-spacecation p {
   color:white;
+}
+
+#your-spacecation h1 {
+font-size: 26px;
+font-family: Lato;
+font-weight: 700;
+letter-spacing: 3px;
+text-transform: uppercase;
+margin-bottom: 25px;
+margin-top: 80px;
 }
 
 /* press-and-images */
